# bornomala

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml
docs/: go.mod  hugo.toml
docs/content/: _index.md
docs/content/docs/: _index.md  calendar.md  currency.md  datetime.md  digits.md  getting-started.md  numbers.md  ordinals.md  text.md
docs/layouts/partials/docs/inject/: head.html
docs/static/css/: kalpurush.css
src/bornomala/: __init__.py  _calendar.py  _currency.py  _data.py  _datetime.py  _digits.py  _normalize.py  _num_to_words.py  _ordinal.py  _words_to_num.py
tests/: test_calendar.py  test_currency.py  test_datetime.py  test_digits.py  test_normalize.py  test_num_to_words.py  test_ordinal.py  test_words_to_num.py
